# gimp-tilemap-gb

./: .gitignore  Makefile  README.md  file-tilemap
console/: Makefile  README.md
console/src/: color_space.c  color_space.h  console_export_imagefile.c  console_export_imagefile.h  console_import_imagefile.c  console_import_imagefile.h  console_main.c  image_load.c  image_load.h  image_process.c  image_process.h  image_remap.c  image_remap.h  palette.c  palette.h  tilemap_console.c  tilemap_console.h
src/: Makefile.am  color_space.c  color_space.h  export-dialog.c  export-dialog.h  file-tilemap-export.c  file-tilemap.c  format_snesgb_2bpp.c  hash.c  hash.h  image_info.h  image_remap.c  lib_gbm.c  lib_gbm.h  lib_gbm_export.c  lib_gbm_export.h  lib_gbm_file_utils.c  lib_gbm_file_utils.h  lib_gbm_import.c  lib_gbm_import.h  lib_gbm_ops.c  lib_gbm_ops.h  lib_gbr.c  lib_gbr.h  lib_gbr.h.gch  lib_gbr_export.c  lib_gbr_export.h  lib_gbr_file_utils.c  lib_gbr_file_utils.h  lib_gbr_import.c  lib_gbr_import.h  lib_gbr_ops.c  lib_gbr_ops.h  lib_rom_bin.c  lib_rom_bin.h  lib_tilemap.c  lib_tilemap.h  logging.c  logging.h  options.c  (+24 more)
tools/: gbm.grammar  gbr.grammar
